--- a/index.html
+++ b/index.html
@@ -630,12 +630,12 @@
 		</div>
 	</div>
 
-	<!-- // <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script> -->
-	<!-- // <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
-	<!-- // <script type="text/javascript" src="js/script.js"></script> -->
+	// <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
+	// <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	// <script type="text/javascript" src="js/script.js"></script>
 	<!-- // <script type="text/javascript" src="js/script.min.js"></script> -->
 	<!-- // <script type="text/javascript" src="js/script-jquery.min.js"></script> -->
-	<script type="text/javascript" src="js/jquery-jqui-ga-scripts.min.js"></script>
+	<!-- <script type="text/javascript" src="js/jquery-jqui-ga-scripts.min.js"></script> -->
 	<!-- // <script type="text/javascript" src="js/jquery-jqui-ga-scripts-gzip.min.js"></script> -->
 	<!-- // <script type="text/javascript" src="js/jquery-jqui-ga-scripts.min.js.gzip"></script> -->
 
