second looping video added

--- a/focus/index.html
+++ b/focus/index.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 	<video autoplay loop width="530">
+		<source src="img/masterminds-movie_tumblr.mp4" type="video/mp4">
+		<source src="img/masterminds-movie_tumblr.webm" type="video/webm">
+		<img src="img/masterminds-movie_tumblr.jpg" alt="">
+	</video>
+	<video autoplay loop width="530">
 		<source src="img/canon-nytimes-takeover-jamie-foxx.mp4" type="video/mp4">
 		<source src="img/canon-nytimes-takeover-jamie-foxx.webm" type="video/webm">
-		<img src="canon_imagina10n_takeover1.jpg" alt="">
+		<img src="img/canon_imagina10n_takeover1.jpg" alt="">
 	</video>
 </body>
 </html>
