--- a/focus/index.html
+++ b/focus/index.html
@@ -3,17 +3,46 @@
 <head>
 	<meta charset="UTF-8">
 	<title>omnio.us (focus)</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<video autoplay loop width="530">
-		<source src="img/masterminds-movie_tumblr.mp4" type="video/mp4">
-		<source src="img/masterminds-movie_tumblr.webm" type="video/webm">
-		<img src="img/masterminds-movie_tumblr.jpg" alt="">
-	</video>
-	<video autoplay loop width="530">
-		<source src="img/canon-nytimes-takeover-jamie-foxx.mp4" type="video/mp4">
-		<source src="img/canon-nytimes-takeover-jamie-foxx.webm" type="video/webm">
-		<img src="img/canon_imagina10n_takeover1.jpg" alt="">
-	</video>
+	<nav role="contentinfo">
+		<!-- theme switch -->
+		<p class="copyright">©2017 ornette coleman</p>
+		<a href="https://twitter.com/omniosi" target="_blank"><svg></svg></a>
+		<ul>
+			<li><a href="">github</a></li>
+			<li><a href="">linkedin</a></li>
+			<li><a href="">resumé</a></li>
+		</ul>
+	</nav>
+	<header role="banner">
+		<span class="plaque">
+			<img src="img/omnio-us_logo.png" alt="omnio.us">
+		</span>
+		<span>design &amp; <br>development</span>
+	</header>
+	<main role="main">
+		<article role="article">
+			<video autoplay loop width="530">
+				<source src="img/canon-nytimes-takeover-jamie-foxx.mp4" type="video/mp4">
+				<source src="img/canon-nytimes-takeover-jamie-foxx.webm" type="video/webm">
+				<img src="img/canon_imagina10n_takeover.jpg" alt="Canon Project Imagina10n takeover ad">
+			</video>
+			<span class="copy">
+				
+			</span>
+		</article>
+		<article class="flip" role="article">
+			<video autoplay loop width="530">
+				<source src="img/masterminds-movie_tumblr.mp4" type="video/mp4">
+				<source src="img/masterminds-movie_tumblr.webm" type="video/webm">
+				<img src="img/masterminds-movie_tumblr.jpg" alt="Masterminds movie tumblr page">
+			</video>
+			<span class="copy">
+				
+			</span>
+		</article>
+	</main>
 </body>
 </html>
