added local fonts

--- a/focus/index.html
+++ b/focus/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>omnio.us (focus)</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<nav role="contentinfo">
@@ -20,7 +21,7 @@
 		<span class="plaque">
 			<img src="img/omnio-us_logo.png" alt="omnio.us">
 		</span>
-		<span>design &amp; <br>development</span>
+		<span class="title">design &amp; <br>development</span>
 	</header>
 	<main role="main">
 		<article role="article">
