theme switch setup

--- a/focus/index.html
+++ b/focus/index.html
@@ -12,11 +12,20 @@
 	<input type="checkbox" id="theme" checked>
 	<label class="toggle-switch" for="theme">
 		<div class="toggle-screenreader">Theme switcher</div>
+		<span>
+			<i class="fas fa-moon"></i>
+			<i class="fas fa-sun"></i>
+		</span>
 	</label>
 
 	<nav role="contentinfo">
-		<p class="copyright">©2017 ornette coleman</p>
-		<a href="https://twitter.com/omniosi" target="_blank"><i class="fab fa-twitter"></i> twitter</a>
+		<span class="copyright">
+			©2017 ornette coleman
+			<a href="https://twitter.com/omniosi" target="_blank">
+				<i class="fab fa-twitter"></i>
+				 <!-- twitter -->
+			</a>
+		</span>
 		<span class="btn-group">
 			<a href=""><span class="label"><i class="fab fa-github"></i> github</span></a>
 			<a href=""><span class="label"><i class="fab fa-linkedin"></i> linkedin</span></a>
@@ -25,9 +34,9 @@
 	</nav>
 	<main role="main">
 		<header role="banner">
-			<span class="plaque">
-				<img src="img/omnio-us_logo.png" alt="omnio.us">
-			</span>
+			<figure class="plaque">
+				<img src="img/omnio-us_logo.png" alt="omnio.us" width="290" height="49">
+			</figure>
 			<span class="title">design &amp; <br>development</span>
 		</header>
 		<article role="article">
@@ -37,7 +46,11 @@
 				<img src="img/canon_imagina10n_takeover.jpg" alt="Canon Project Imagina10n takeover ad">
 			</video>
 			<span class="copy">
-				
+				<p class="type">Homepage Takeover Ad</p>
+				<h1>CANON</h1>
+				<h2>Project Imagina10n</h2>
+				<p class="text"><span class="heading">BRIEF:</span> After repeated failed attempts to get the text-destructive animation just right, I was approached to create this animation. I worked directly with the ad publisher and nytimes.com to make sure that this home-page takeover ad performed perfectly.</p>
+				<p class="text"><span>PROCESS:</span> Animation created in Adobe Flash with ActionScript code for the vendor's custom ad server code. Files uploaded to FTP server for delivery to outside vendor for deployment.</p>
 			</span>
 		</article>
 		<article class="flip" role="article">
