added nav buttons

--- a/focus/index.html
+++ b/focus/index.html
@@ -27,9 +27,9 @@
 			</a>
 		</span>
 		<span class="btn-group">
-			<a href=""><span class="label"><i class="fab fa-github"></i> github</span></a>
-			<a href=""><span class="label"><i class="fab fa-linkedin"></i> linkedin</span></a>
-			<a href=""><span class="label"><i class="fas fa-file"></i> resumé</span></a>
+			<a href="https://github.com/omniosi/" target="_blank"><i class="fab fa-github"></i> github</a>
+			<a href="https://www.linkedin.com/in/ornettecoleman/" target="_blank"><i class="fab fa-linkedin"></i> linkedin</a>
+			<a href="files/ornette-coleman_resume.pdf" target="_blank"><i class="fas fa-file"></i> resumé</a>
 		</span>
 	</nav>
 	<main role="main">
