fixed toggle and nav positioning

--- a/focus/index.html
+++ b/focus/index.html
@@ -37,7 +37,7 @@
 			<figure class="plaque">
 				<img src="img/omnio-us_logo.png" alt="omnio.us" width="290" height="49">
 			</figure>
-			<span class="title">design &amp; <br>development</span>
+			<span class="title">design <span class="and">&amp;</span> <br>development</span>
 		</header>
 		<article role="article">
 			<video autoplay loop width="530">
