--- a/focus/index.html
+++ b/focus/index.html
@@ -50,7 +50,7 @@
 				<h1>CANON</h1>
 				<h2>Project Imagina10n</h2>
 				<p class="text"><span class="heading">BRIEF:</span> After repeated failed attempts to get the text-destructive animation just right, I was approached to create this animation. I worked directly with the ad publisher and nytimes.com to make sure that this home-page takeover ad performed perfectly.</p>
-				<p class="text"><span>PROCESS:</span> Animation created in Adobe Flash with ActionScript code for the vendor's custom ad server code. Files uploaded to FTP server for delivery to outside vendor for deployment.</p>
+				<p class="text"><span class="heading">PROCESS:</span> Animation created in Adobe Flash with ActionScript code for the vendor's custom ad server code. Files uploaded to FTP server for delivery to outside vendor for deployment.</p>
 			</span>
 		</article>
 		<article class="flip" role="article">
