--- a/focus/index.html
+++ b/focus/index.html
@@ -47,8 +47,22 @@
 			</video>
 			<span class="copy">
 				<p class="type">Homepage Takeover Ad</p>
-				<h1>CANON</h1>
+				<h1>Canon</h1>
 				<h2>Project Imagina10n</h2>
+				<p class="text"><span class="heading">BRIEF:</span> After repeated failed attempts to get the text-destructive animation just right, I was approached to create this animation. I worked directly with the ad publisher and nytimes.com to make sure that this home-page takeover ad performed perfectly.</p>
+				<p class="text"><span class="heading">PROCESS:</span> Animation created in Adobe Flash with ActionScript code for the vendor's custom ad server code. Files uploaded to FTP server for delivery to outside vendor for deployment.</p>
+			</span>
+		</article>
+		<article role="article">
+			<!-- <video autoplay loop width="530"> -->
+				<!-- <source src="img/canon-nytimes-takeover-jamie-foxx.mp4" type="video/mp4"> -->
+				<!-- <source src="img/canon-nytimes-takeover-jamie-foxx.webm" type="video/webm"> -->
+				<img src="img/harvey-nichols_lipstick-stain-remover.jpg" alt="Harvey Nichols Lipstick Stain Remover responsive ad">
+			<!-- </video> -->
+			<span class="copy">
+				<p class="type">Responsive Web Ad</p>
+				<h1>Harvey Nichols</h1>
+				<h2>Lipstick Stain Remover</h2>
 				<p class="text"><span class="heading">BRIEF:</span> After repeated failed attempts to get the text-destructive animation just right, I was approached to create this animation. I worked directly with the ad publisher and nytimes.com to make sure that this home-page takeover ad performed perfectly.</p>
 				<p class="text"><span class="heading">PROCESS:</span> Animation created in Adobe Flash with ActionScript code for the vendor's custom ad server code. Files uploaded to FTP server for delivery to outside vendor for deployment.</p>
 			</span>
